@@ -40,6 +40,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/asl">ASL</license>
  <notes>
+* [jan] Fix searching multiple names via the API.
 * [jan] Fix searching and listing clients via the API.
  </notes>
  <contents>
@@ -1409,6 +1410,7 @@
    <date>2012-07-06</date>
    <license uri="http://www.horde.org/licenses/asl">ASL</license>
    <notes>
+* [jan] Fix searching multiple names via the API.
 * [jan] Fix searching and listing clients via the API.
    </notes>
   </release>
